--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
                 <div class="modal-body">
 
                   <div class="alert alert-primary" role="alert">
+                    <i class="fas fa-info-circle"></i>
                     Este producto está agotado
                   </div>
 
@@ -207,10 +208,10 @@
               <div class="card-body">
                 <h5 class="card-title">Hipster Ultimate</h5>
                 <p class="card-text">La camiseta ideal para hipsters.</p>
-                <a href="#" class="btn btn-primary">
+                <a href="#" class="btn btn-sm btn-primary">
                   $229 <i class="fas fa-shopping-cart"></i>
                 </a>
-                <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#camiseta1">
+                <button type="button" class="btn btn-sm btn-outline-dark" data-toggle="modal" data-target="#camiseta1">
                   Detalles
                 </button>
               </div>
@@ -223,10 +224,10 @@
               <div class="card-body">
                 <h5 class="card-title">On Motion Live</h5>
                 <p class="card-text">Perfecta para salidas rocosas.</p>
-                <a href="#" class="btn btn-primary">
+                <a href="#" class="btn btn-sm btn-primary">
                   $229 <i class="fas fa-shopping-cart"></i>
                 </a>
-                <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#camiseta1">
+                <button type="button" class="btn btn-sm btn-outline-dark" data-toggle="modal" data-target="#camiseta1">
                   Detalles
                 </button>
               </div>
@@ -239,10 +240,10 @@
               <div class="card-body">
                 <h5 class="card-title">Underground Max</h5>
                 <p class="card-text">Para los amantes del underground.</p>
-                <a href="#" class="btn btn-primary">
+                <a href="#" class="btn btn-sm btn-primary">
                   $229 <i class="fas fa-shopping-cart"></i>
                 </a>
-                <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#camiseta1">
+                <button type="button" class="btn btn-sm btn-outline-dark" data-toggle="modal" data-target="#camiseta1">
                   Detalles
                 </button>
               </div>
@@ -254,10 +255,10 @@
               <div class="card-body">
                 <h5 class="card-title">Hipster Ultimate</h5>
                 <p class="card-text">La camiseta ideal para hipsters.</p>
-                <a href="#" class="btn btn-primary">
+                <a href="#" class="btn btn-sm btn-primary">
                   $229 <i class="fas fa-shopping-cart"></i>
                 </a>
-                <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#camiseta1">
+                <button type="button" class="btn btn-sm btn-outline-dark" data-toggle="modal" data-target="#camiseta1">
                   Detalles
                 </button>
               </div>
@@ -269,10 +270,10 @@
               <div class="card-body">
                 <h5 class="card-title">Hipster Ultimate</h5>
                 <p class="card-text">La camiseta ideal para hipsters.</p>
-                <a href="#" class="btn btn-primary">
+                <a href="#" class="btn btn-sm btn-primary">
                   $229 <i class="fas fa-shopping-cart"></i>
                 </a>
-                <button type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#camiseta1">
+                <button type="button" class="btn btn-sm btn-outline-dark" data-toggle="modal" data-target="#camiseta1">
                   Detalles
                 </button>
               </div>
