--- a/index.html
+++ b/index.html
@@ -288,6 +288,6 @@
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="crossorigin="anonymous"></script>
   <script src="./bootstrap4/js/bootstrap.bundle.min.js"></script>
-  <script async src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+  <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 </body>
 </html>
